--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,11 +8,11 @@ environment:
   sdk: '>=3.5.0-180.3.beta <4.0.0'
 
 dependencies:
+  cupertino_icons: ^1.0.8
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.8
   font_awesome_flutter: ^10.7.0
-  get: ^4.6.6
+  go_router: ^14.4.1
   google_fonts: ^6.2.1
 
 dev_dependencies:
