--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
 dependencies:
   cupertino_icons: ^1.0.8
   dartz: ^0.10.1
+  dio: ^5.7.0
   equatable: ^2.0.5
   flutter:
     sdk: flutter
