--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   dartz: ^0.10.1
   dio: ^5.7.0
+  easy_url_launcher: ^0.0.7
   equatable: ^2.0.5
   flutter:
     sdk: flutter
